Change image format from .jpg to .jpeg

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <main>
     <!-- عرض الصورة الكبيرة -->
     <div class="card" id="viewer">
-      <img id="mainImage" src="images/menu1.jpg" alt="منيو NOVA CAFE">
+      <img id="mainImage" src="images/menu1.jpeg" alt="منيو NOVA CAFE">
     </div>
 
     <!-- ملاحظة قصيرة -->
@@ -111,9 +111,9 @@
 
     <!-- مصغرات الصور (ضع/غير أسماء الصور حسب ما رفعتها) -->
     <div class="thumbs">
-      <img src="images/menu1.jpg" alt="صفحة 1" data-full="images/menu1.jpg">
-      <img src="images/menu2.jpg" alt="صفحة 2" data-full="images/menu2.jpg">
-      <img src="images/menu3.jpg" alt="صفحة 3" data-full="images/menu3.jpg">
+      <img src="images/menu1.jpeg" alt="صفحة 1" data-full="images/menu1.jpeg">
+      <img src="images/menu2.jpeg" alt="صفحة 2" data-full="images/menu2.jpeg">
+      <img src="images/menu3.jpeg" alt="صفحة 3" data-full="images/menu3.jpeg">
     </div>
   </main>
 
