--- a/index.html
+++ b/index.html
@@ -4,83 +4,44 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>NOVA CAFE - المنيو</title>
-
-  <!-- ألوان الهوية: تركوازي + بني -->
   <style>
     :root{
       --turquoise: #3db6ad;
       --brown: #8a5a3b;
       --bg: #fbfaf8;
-      --card-bg: #ffffff;
     }
-    *{box-sizing:border-box}
     body{
       margin:0;
-      font-family: "Segoe UI", Tahoma, Arial, "Noto Kufi Arabic", sans-serif;
+      font-family:"Segoe UI", Tahoma, Arial, "Noto Kufi Arabic", sans-serif;
       background:linear-gradient(180deg,var(--bg),#f2f2f1);
       color:#222;
       -webkit-font-smoothing:antialiased;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
     }
     header{
+      width:100%;
       background: linear-gradient(90deg,var(--turquoise),var(--brown));
       color:#fff;
       padding:18px 12px;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      gap:12px;
-      box-shadow:0 3px 12px rgba(0,0,0,0.08);
-    }
-    header .brand{
+      text-align:center;
       font-weight:700;
       font-size:20px;
-      letter-spacing:1px;
+      box-shadow:0 3px 12px rgba(0,0,0,0.08);
     }
-    main{
+    .menu-img{
+      width:90%;
       max-width:920px;
-      margin:18px auto;
-      padding:12px;
-    }
-    .card{
-      background:var(--card-bg);
-      border-radius:14px;
-      padding:10px;
-      margin-bottom:16px;
+      margin:20px 0;
+      border-radius:12px;
       box-shadow:0 4px 18px rgba(0,0,0,0.06);
-      display:flex;
-      justify-content:center;
-      align-items:center;
-    }
-    .card img{
-      width:100%;
-      height:auto;
-      border-radius:10px;
-      display:block;
-      max-height:78vh;
-      object-fit:contain;
-    }
-    .thumbs{
-      display:flex;
-      gap:10px;
-      justify-content:center;
-      flex-wrap:wrap;
-      margin-top:6px;
-    }
-    .thumbs img{
-      width:120px;
-      height:80px;
-      object-fit:cover;
-      border-radius:8px;
       cursor:pointer;
-      box-shadow:0 2px 8px rgba(0,0,0,0.08);
-      transition:transform .12s ease;
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
     }
-    .thumbs img:active{transform:scale(.98)}
-    .note{
-      text-align:center;
-      color:#444;
-      font-size:13px;
-      margin:8px 0 24px 0;
+    .menu-img:hover{
+      transform: scale(1.01);
+      box-shadow:0 8px 20px rgba(0,0,0,0.15);
     }
     footer{
       text-align:center;
@@ -88,48 +49,27 @@
       color:#666;
       padding:18px 6px;
     }
-    @media (min-width:880px){
-      .card img{max-width:820px}
-    }
   </style>
 </head>
 <body>
-  <header>
-    <div class="brand">NOVA CAFE</div>
-  </header>
+  <header>NOVA CAFE</header>
 
-  <main>
-    <div class="card" id="viewer">
-      <img id="mainImage" src="images/menu1.jpeg" alt="منيو NOVA CAFE">
-    </div>
-
-    <div class="note">اضغط على أي صورة لعرضها بالحجم الكامل. لتحميل منيو جديد استبدل ملفات الصور في مجلد <code>/images</code>.</div>
-
-    <div class="thumbs">
-      <img src="images/menu1.jpeg" alt="صفحة 1" data-full="images/menu1.jpeg">
-      <img src="images/menu2.jpeg" alt="صفحة 2" data-full="images/menu2.jpeg">
-      <img src="images/menu3.jpeg" alt="صفحة 3" data-full="images/menu3.jpeg">
-    </div>
-  </main>
+  <!-- عرض جميع الصور كاملة -->
+  <img class="menu-img" src="images/menu1.jpeg" alt="صفحة 1 من المنيو">
+  <img class="menu-img" src="images/menu2.jpeg" alt="صفحة 2 من المنيو">
+  <img class="menu-img" src="images/menu3.jpeg" alt="صفحة 3 من المنيو">
 
   <footer>
     © <strong>NOVA CAFE</strong> — مسح الـQR يفتح هذا المنيو. لتحديث المنيو: استبدل ملفات الصور في مجلد <code>/images</code>.
   </footer>
 
   <script>
-    (function(){
-      const main = document.getElementById('mainImage');
-      document.querySelectorAll('.thumbs img').forEach(t=>{
-        t.addEventListener('click', ()=>{
-          const full = t.dataset.full || t.src;
-          main.src = full;
-        });
+    // فتح الصورة بالحجم الكامل عند الضغط عليها
+    document.querySelectorAll('.menu-img').forEach(img=>{
+      img.addEventListener('click', ()=>{
+        window.open(img.src, '_blank');
       });
-
-      main.addEventListener('click', ()=>{
-        window.open(main.src, '_blank');
-      });
-    })();
+    });
   </script>
 </body>
 </html>
