--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   <img class="menu-img" src="images/menu3.jpeg" alt="صفحة 3 من المنيو">
 
   <footer>
-    © <strong>NOVA CAFE</strong> — مسح الـQR يفتح هذا المنيو. لتحديث المنيو: استبدل ملفات الصور في مجلد <code>/images</code>.
+    © <strong>مع تحيات المهندس الموقر معاذ بلتو</strong>
   </footer>
 </body>
 </html>
