--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
   </style>
 </head>
 <body>
-  <header>NOVA CAFE</header>
+  <header>NOVA CAFE MENU</header>
 
   <!-- عرض جميع الصور كاملة -->
   <img class="menu-img" src="images/menu1.jpeg" alt="صفحة 1 من المنيو">
-  <img class="menu-img" src="images/menu2.jpeg" alt="صفحة 2 من المنيو">
-  <img class="menu-img" src="images/menu3.jpeg" alt="صفحة 3 من المنيو">
+  <img class="menu-img" src="images/menu2.JPG" alt="صفحة 2 من المنيو">
+  <img class="menu-img" src="images/menu3.JPG" alt="صفحة 3 من المنيو">
 
   <footer>
     © <strong>مع تحيات المهندس الموقر معاذ بلتو</strong>
