--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
   <header>NOVA CAFE MENU</header>
 
   <!-- عرض جميع الصور كاملة -->
-  <img class="menu-img" src="images/menu1.jpg" alt="صفحة 1 من المنيو">
-  <img class="menu-img" src="images/menu2.jpg" alt="صفحة 2 من المنيو">
-  <img class="menu-img" src="images/menu3.jpg" alt="صفحة 3 من المنيو">
+  <img class="menu-img" src="images/menu1.webp" alt="صفحة 1 من المنيو">
+  <img class="menu-img" src="images/menu2.webp" alt="صفحة 2 من المنيو">
+  <img class="menu-img" src="images/menu3.webp" alt="صفحة 3 من المنيو">
 
   <footer>
   </footer>
